force-app/main/default/objects/Account/fields/Direccion1__c.field-meta.xml
<CustomField>
    <fullName>Direccion1__c</fullName>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>