force-app/main/default/objects/Account/fields/Direccion2__c.field-meta.xml
<CustomField>
    <fullName>Direccion2__c</fullName>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>