force-app/main/default/objects/Account/fields/Direccion_contacto_principal__c.field-meta.xml
<CustomField>
    <fullName>Direccion_contacto_principal__c</fullName>
    <label>Su Dirección de contacto principal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DIRECCIÓN DE RESIDENCIA</fullName>
            </value>
            <value>
                <fullName>DIRECCIÓN DE TRABAJO</fullName>
            </value>
            <value>
                <fullName>CORREO ELECTRÓNICO PERSONAL</fullName>
            </value>
            <value>
                <fullName>CORREO ELECTRÓNICO LABORAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>