force-app/main/default/objects/Account/fields/Direccion_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Empresa__c</fullName>
    <label>Dirección</label>
    <length>200</length>
    <type>Text</type>
</CustomField>