force-app/main/default/objects/Account/fields/Ejecutivo_Negocios_del__c.field-meta.xml
<CustomField>
    <fullName>Ejecutivo_Negocios_del__c</fullName>
    <label>Ejecutivo Negocios</label>
    <length>255</length>
    <type>Text</type>
</CustomField>