force-app/main/default/objects/Account/fields/Encargado_Kit__c.field-meta.xml
<CustomField>
    <fullName>Encargado_Kit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Persona encargado de entregar el kit al cliente.</description>
    <label>Encargado Kit</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>