force-app/main/default/objects/Account/fields/Entrego_Kit__c.field-meta.xml
<CustomField>
    <fullName>Entrego_Kit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para llevar control de Kit entregado a cliente.</description>
    <label>Entrego Kit?</label>
    <type>Checkbox</type>
</CustomField>