force-app/main/default/objects/Account/fields/Es_Residente__c.field-meta.xml
<CustomField>
    <fullName>Es_Residente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Es Residente?</label>
    <type>Checkbox</type>
</CustomField>