force-app/main/default/objects/Account/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Proceso Finalizado</fullName>
            </value>
            <value>
                <fullName>En proceso de afiliación</fullName>
            </value>
            <value>
                <fullName>Acivo</fullName>
                <isActive>false</isActive>
                <label>Acivo</label>
            </value>
            <value>
                <fullName>Inacivo</fullName>
                <isActive>false</isActive>
                <label>Inacivo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>