force-app/main/default/objects/Account/fields/Estado_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_cuenta__c</fullName>
    <label>Estado de cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <label>Activo</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Inactivo</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>