force-app/main/default/objects/Account/fields/Extension_Oficina__c.field-meta.xml
<CustomField>
    <fullName>Extension_Oficina__c</fullName>
    <label>Extension Oficina</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>