force-app/main/default/objects/Account/fields/FATCA__c.field-meta.xml
<CustomField>
    <fullName>FATCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FATCA</label>
    <type>Checkbox</type>
</CustomField>