force-app/main/default/objects/Account/fields/Fax_Oficina__c.field-meta.xml
<CustomField>
    <fullName>Fax_Oficina__c</fullName>
    <label>Fax Oficina</label>
    <type>Phone</type>
</CustomField>