force-app/main/default/objects/Account/fields/Fax_Representante__c.field-meta.xml
<CustomField>
    <fullName>Fax_Representante__c</fullName>
    <label>Fax Representante</label>
    <type>Phone</type>
</CustomField>