force-app/main/default/objects/Account/fields/Fecha_Convirtio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Convirtio__c</fullName>
    <description>Fecha de conversión de preventa a cliente.</description>
    <label>Fecha Convirtio</label>
    <type>DateTime</type>
</CustomField>