force-app/main/default/objects/Account/fields/Fecha_de_Ingreso_FPC__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Ingreso_FPC__c</fullName>
    <label>Fecha de Ingreso FPC</label>
    <type>Date</type>
</CustomField>