force-app/main/default/objects/Account/fields/Forma_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Pago__c</fullName>
    <label>Forma de Pagó</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TL</fullName>
                <label>Caja</label>
            </value>
            <value>
                <fullName>CK</fullName>
                <label>Cheque</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Planilla</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>Interbanca</label>
            </value>
            <value>
                <fullName>MV</fullName>
                <label>App Movil</label>
            </value>
            <value>
                <fullName>AH</fullName>
                <label>Cuenta Ahorro</label>
            </value>
            <value>
                <fullName>TA</fullName>
                <label>Tarjeta</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>