force-app/main/default/objects/Account/fields/FPC_Fecha_de_Creacion_de_Preventa__c.field-meta.xml
<CustomField>
    <fullName>FPC_Fecha_de_Creacion_de_Preventa__c</fullName>
    <description>Fecha de creación de preventa</description>
    <inlineHelpText>Fecha de creación de preventa</inlineHelpText>
    <label>Fecha de Creación de Preventa</label>
    <type>DateTime</type>
</CustomField>