force-app/main/default/objects/Account/fields/Grado_Familiar__c.field-meta.xml
<CustomField>
    <fullName>Grado_Familiar__c</fullName>
    <label>Grado Familiar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Primer Grado</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Segundo Grado</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Tercer Grado</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Cuarto Grado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>