force-app/main/default/objects/Account/fields/Hijos__c.field-meta.xml
<CustomField>
    <fullName>Hijos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hijos</label>
    <type>Checkbox</type>
</CustomField>