force-app/main/default/objects/Account/fields/Identidad_Representante__c.field-meta.xml
<CustomField>
    <fullName>Identidad_Representante__c</fullName>
    <label>Identidad Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>