force-app/main/default/objects/Account/fields/Identificacion__c.field-meta.xml
<CustomField>
    <fullName>Identificacion__c</fullName>
    <externalId>true</externalId>
    <label>Identificacion</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>