force-app/main/default/objects/Account/fields/Identificacion_Empleador__c.field-meta.xml
<CustomField>
    <fullName>Identificacion_Empleador__c</fullName>
    <label>RTN Empleador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>