force-app/main/default/objects/Account/fields/Imprimir_EDC__c.field-meta.xml
<CustomField>
    <fullName>Imprimir_EDC__c</fullName>
    <formula>HYPERLINK(&quot;/apex/vfEstadoCuentaMasivo?id=&quot;&amp;Id&amp;&quot;&amp;idCliente=&quot;&amp;Name , &quot;Imprimir EDC Masivo&quot;,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imprimir EDC</label>
    <type>Text</type>
</CustomField>