force-app/main/default/objects/Account/fields/Lugar_Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Lugar_Nacimiento__c</fullName>
    <label>Lugar Nacimiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>