force-app/main/default/objects/Account/fields/Mantiene_relacion__c.field-meta.xml
<CustomField>
    <fullName>Mantiene_relacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Mantiene relación?</label>
    <type>Checkbox</type>
</CustomField>