force-app/main/default/objects/Account/fields/Motivo_de_Contacto__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_Contacto__c</fullName>
    <label>Nombre de Campaña</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGUINALDO 2018</fullName>
            </value>
            <value>
                <fullName>Asesoría Producto Empresarial</fullName>
            </value>
            <value>
                <fullName>Asesoría Producto Individual</fullName>
            </value>
            <value>
                <fullName>BONO SEPT GFF</fullName>
            </value>
            <value>
                <fullName>Campaña HTML</fullName>
            </value>
            <value>
                <fullName>Inicio de Año 2019</fullName>
            </value>
            <value>
                <fullName>Queja</fullName>
            </value>
            <value>
                <fullName>Referido</fullName>
            </value>
            <value>
                <fullName>Solicitud Gestión</fullName>
            </value>
            <value>
                <fullName>Sugerencia</fullName>
            </value>
            <value>
                <fullName>BONO MARZO GFF</fullName>
            </value>
            <value>
                <fullName>Facebook 2019</fullName>
            </value>
            <value>
                <fullName>CAMPAÑA INSTITUCIONAL 2019</fullName>
            </value>
            <value>
                <fullName>Referido Call Center</fullName>
            </value>
            <value>
                <fullName>Referido Medios Electronicos</fullName>
            </value>
            <value>
                <fullName>Referido Call USA</fullName>
            </value>
            <value>
                <fullName>Referido Medios Electrónicos USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>