force-app/main/default/objects/Account/fields/Nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Nacimiento__c</fullName>
    <formula>Text(DAY(PersonBirthdate)) + &apos;-&apos; + Text(MONTH(PersonBirthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nacimiento</label>
    <type>Text</type>
</CustomField>