force-app/main/default/objects/Account/fields/Nacionalidad__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad__c</fullName>
    <label>Nacionalidad</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALBINO</fullName>
            </value>
            <value>
                <fullName>ALEMAN</fullName>
            </value>
            <value>
                <fullName>ALHUCENO</fullName>
            </value>
            <value>
                <fullName>ANDORRENO</fullName>
            </value>
            <value>
                <fullName>ANGOLENO</fullName>
            </value>
            <value>
                <fullName>ANTILLANO</fullName>
            </value>
            <value>
                <fullName>ARABE</fullName>
            </value>
            <value>
                <fullName>ARGELI</fullName>
            </value>
            <value>
                <fullName>ARGENTINO</fullName>
            </value>
            <value>
                <fullName>AUSTRALIANO</fullName>
            </value>
            <value>
                <fullName>AUSTRIACO</fullName>
            </value>
            <value>
                <fullName>BAHAMENO</fullName>
            </value>
            <value>
                <fullName>BAHRENO</fullName>
            </value>
            <value>
                <fullName>BARBENO</fullName>
            </value>
            <value>
                <fullName>BELGA</fullName>
            </value>
            <value>
                <fullName>BELICENO</fullName>
            </value>
            <value>
                <fullName>BERMUDENO</fullName>
            </value>
            <value>
                <fullName>BIRMANO</fullName>
            </value>
            <value>
                <fullName>BOLIVIANO</fullName>
            </value>
            <value>
                <fullName>BORNENO</fullName>
            </value>
            <value>
                <fullName>BRAZILENO</fullName>
            </value>
            <value>
                <fullName>BRUNENO</fullName>
            </value>
            <value>
                <fullName>BULGARO</fullName>
            </value>
            <value>
                <fullName>BUTANO</fullName>
            </value>
            <value>
                <fullName>CACHEMIRENO</fullName>
            </value>
            <value>
                <fullName>CAMBOYANO</fullName>
            </value>
            <value>
                <fullName>CAMERUNES</fullName>
            </value>
            <value>
                <fullName>CAMORANO</fullName>
            </value>
            <value>
                <fullName>CANADIENSE</fullName>
            </value>
            <value>
                <fullName>CEILANO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>