force-app/main/default/objects/Account/fields/Nacionalidad_Representante__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidad_Representante__c</fullName>
    <label>Nacionalidad Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>