force-app/main/default/objects/Account/fields/Nivel_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Ingreso__c</fullName>
    <description>Nivel de ingreso que gana en lempiras</description>
    <label>Nivel Ingresos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>L0.00 - L16,000.00</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>L16,000.01 - L26,496.00</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>L26,496.01 - L52,992.00</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>L52,992.01 - L88,320.00</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>L88,320.01 - L176,640.00</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>L176,640.01 - L441,600.00</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Mayor a L441,600.00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>