force-app/main/default/objects/Account/fields/Nivel_Riesgo__c.field-meta.xml
<CustomField>
    <fullName>Nivel_Riesgo__c</fullName>
    <label>Nivel Riesgo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>BAJO</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>MEDIO</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>ALTO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>