force-app/main/default/objects/Account/fields/Nombre1__c.field-meta.xml
<CustomField>
    <fullName>Nombre1__c</fullName>
    <label>1. Nombre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>