force-app/main/default/objects/Account/fields/Nombre2__c.field-meta.xml
<CustomField>
    <fullName>Nombre2__c</fullName>
    <label>2. Nombre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>