force-app/main/default/objects/Account/fields/Nombre_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Comercial__c</fullName>
    <label>Nombre Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>