force-app/main/default/objects/Account/fields/Nombre_Completo_Contacto_1__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo_Contacto_1__c</fullName>
    <label>Nombre Completo Contacto 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>