force-app/main/default/objects/Account/fields/Nombre_Completo_Contacto_2__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Completo_Contacto_2__c</fullName>
    <label>Nombre Completo Contacto 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>