force-app/main/default/objects/Account/fields/Nombre_Empleador__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Empleador__c</fullName>
    <label>Nombre Empleador</label>
    <length>255</length>
    <type>Text</type>
</CustomField>