force-app/main/default/objects/Account/fields/Nombre_empresa__c.field-meta.xml
<CustomField>
    <fullName>Nombre_empresa__c</fullName>
    <label>Nombre de empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>