force-app/main/default/objects/Account/fields/Nombre_Representante__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Representante__c</fullName>
    <label>Nombre Representante Legal</label>
    <length>40</length>
    <type>Text</type>
</CustomField>