force-app/main/default/objects/Account/fields/Notificar_Correo__c.field-meta.xml
<CustomField>
    <fullName>Notificar_Correo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Notificar Correo</label>
    <type>Checkbox</type>
</CustomField>