force-app/main/default/objects/Account/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <label>NPS</label>
    <length>40</length>
    <type>Text</type>
</CustomField>