force-app/main/default/objects/Account/fields/Num_Empleados_Reg__c.field-meta.xml
<CustomField>
    <fullName>Num_Empleados_Reg__c</fullName>
    <label>Num Empleados Reg</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>