force-app/main/default/objects/Account/fields/Num_Formulario__c.field-meta.xml
<CustomField>
    <fullName>Num_Formulario__c</fullName>
    <label>Num Formulario</label>
    <length>30</length>
    <type>Text</type>
</CustomField>