force-app/main/default/objects/Account/fields/Num_Total_Empleados__c.field-meta.xml
<CustomField>
    <fullName>Num_Total_Empleados__c</fullName>
    <label>Num Total Empleados</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>