force-app/main/default/objects/Account/fields/NUmero_Cuenta_Colectiva__c.field-meta.xml
<CustomField>
    <fullName>NUmero_Cuenta_Colectiva__c</fullName>
    <label>Número Cuenta Colectiva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>