force-app/main/default/objects/Account/fields/Numero_de_Charlas_Brindadas__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Charlas_Brindadas__c</fullName>
    <label>Número de Charlas Brindadas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>