force-app/main/default/objects/Account/fields/Numero_de_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Contrato__c</fullName>
    <label>Numero de Contrato</label>
    <length>30</length>
    <type>Text</type>
</CustomField>