force-app/main/default/objects/Account/fields/Numero_Dependientes__c.field-meta.xml
<CustomField>
    <fullName>Numero_Dependientes__c</fullName>
    <label>Numero Dependientes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>