force-app/main/default/objects/Account/fields/Numero_hijos__c.field-meta.xml
<CustomField>
    <fullName>Numero_hijos__c</fullName>
    <label>Número de hijos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>