force-app/main/default/objects/Account/fields/Otra_Direccion__c.field-meta.xml
<CustomField>
    <fullName>Otra_Direccion__c</fullName>
    <label>Otra Dirección</label>
    <type>TextArea</type>
</CustomField>