force-app/main/default/objects/Account/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>Pais</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALBANIA</fullName>
            </value>
            <value>
                <fullName>ALEMANIA REPUBLICA FEDERAL</fullName>
            </value>
            <value>
                <fullName>ALHUCENAS. ISLAS</fullName>
            </value>
            <value>
                <fullName>ANDORRA</fullName>
            </value>
            <value>
                <fullName>ANGOLA</fullName>
            </value>
            <value>
                <fullName>ANTILLAS HOLANDESAS</fullName>
            </value>
            <value>
                <fullName>ARABIA SAUDITA</fullName>
            </value>
            <value>
                <fullName>ARGELIA</fullName>
            </value>
            <value>
                <fullName>ARGENTINA</fullName>
            </value>
            <value>
                <fullName>AUSTRALIA</fullName>
            </value>
            <value>
                <fullName>AUSTRIA</fullName>
            </value>
            <value>
                <fullName>BAHAMAS</fullName>
            </value>
            <value>
                <fullName>BAHREIN. ISLA</fullName>
            </value>
            <value>
                <fullName>BARBADOS</fullName>
            </value>
            <value>
                <fullName>BELGICA</fullName>
            </value>
            <value>
                <fullName>BELICE</fullName>
            </value>
            <value>
                <fullName>BERMUDAS</fullName>
            </value>
            <value>
                <fullName>BIRMANIA</fullName>
            </value>
            <value>
                <fullName>BOLIVIA</fullName>
            </value>
            <value>
                <fullName>BORNEO</fullName>
            </value>
            <value>
                <fullName>BRAZIL</fullName>
            </value>
            <value>
                <fullName>BRUNEI</fullName>
            </value>
            <value>
                <fullName>BULGARIA</fullName>
            </value>
            <value>
                <fullName>BUTAN</fullName>
            </value>
            <value>
                <fullName>CACHEMIRE</fullName>
            </value>
            <value>
                <fullName>CAMBOYA</fullName>
            </value>
            <value>
                <fullName>CAMERUN</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
            <value>
                <fullName>CEILAN</fullName>
            </value>
            <value>
                <fullName>CHECOESLOVAQUIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>