force-app/main/default/objects/Account/fields/Pais_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Pais_Residencia__c</fullName>
    <label>Pais Residencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>