force-app/main/default/objects/Account/fields/PAPCE__c.field-meta.xml
<CustomField>
    <fullName>PAPCE__c</fullName>
    <description>Porcentaje de aportaciones Pilar complementario Empleador</description>
    <inlineHelpText>Porcentaje de aportaciones Pilar complementario Empleador</inlineHelpText>
    <label>% Pilar Complementario Patrono</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>