force-app/main/default/objects/Account/fields/PAPCT__c.field-meta.xml
<CustomField>
    <fullName>PAPCT__c</fullName>
    <description>Porcentaje de aportaciones Pilar complementario Trabajador</description>
    <inlineHelpText>Porcentaje de aportaciones Pilar complementario Trabajador</inlineHelpText>
    <label>% Pilar Complementario Trabajador</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>