force-app/main/default/objects/Account/fields/Permitir_Cargar_Planilla_Varios__c.field-meta.xml
<CustomField>
    <fullName>Permitir_Cargar_Planilla_Varios__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Permitir Cargar Planilla Varios</label>
    <type>Checkbox</type>
</CustomField>