force-app/main/default/objects/Account/fields/Poder_Sobre_Empresa__c.field-meta.xml
<CustomField>
    <fullName>Poder_Sobre_Empresa__c</fullName>
    <label>Poder Sobre Empresa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>