force-app/main/default/objects/Account/fields/Por_Defecto__c.field-meta.xml
<CustomField>
    <fullName>Por_Defecto__c</fullName>
    <label>Por Defecto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>Si</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>