force-app/main/default/objects/Account/fields/Por_Defecto_Tel__c.field-meta.xml
<CustomField>
    <fullName>Por_Defecto_Tel__c</fullName>
    <label>Por_Defecto_Tel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S</fullName>
                <label>SI</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>NO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>