force-app/main/default/objects/Account/fields/Porc_Apor_SSoc_Empleado_IVM__c.field-meta.xml
<CustomField>
    <fullName>Porc_Apor_SSoc_Empleado_IVM__c</fullName>
    <label>Porc Apor SSoc Empleado IVM</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>